[pf2blocks] fix right corner (hidden by sheet button)

--- a/block-system-2.0/pathfinder_2/generic/generic.css
+++ b/block-system-2.0/pathfinder_2/generic/generic.css
@@ -54,24 +54,22 @@ label {
    margin-bottom: 5px !important;
    opacity: 0.5;}
 .trait {
-   text-transform: uppercase;
-   padding: 4px 10px 4px 10px;
-   border: 2px solid #D9C484;
-   margin: 10px 10px 15px 0px;
-   background-color: #5E0000;
-   color: white!important;
-   line-height: 2.4em!important;}
-.alignment { background-color: #576293; }
-.size { background-color: #3B7B59; }
-.rarity { background-color: #98513D; }
+  text-transform: uppercase;
+  padding: 4px 10px 4px 10px;
+  border: 2px solid #D9C484;
+  margin: 10px 10px 15px 0px;
+  background-color: #5E0000;
+  color: white!important;
+  line-height: 2.4em!important;}
+.alignment { background-color: #576293;}
+.size { background-color: #3B7B59;}
+.rarity { background-color: #98513D;}
 .r_common { background-color: #3B7B59}
 .r_uncommon { background-color: #98513D}
 .r_rare { background-color: #002664}
 .r_unique { background-color: #800080}
 .trait-form {
    padding: 12px}
-.level {
-   float: right;}
 .table,  .table td,  .table th,  .table-striped,  .table-striped td,  .table-striped th {
    font-family: Tauri Regular!important;
    line-height: 1.6;
@@ -162,7 +160,7 @@ span {
    text-align: center}
 .trait,  b {
    font-family: Tauri Regular!important;}
-.descriptor, b {
+b {
    color: #27241f!important;
    font-weight:900;
    padding: 0px 2px;
@@ -171,3 +169,4 @@ hr { margin-top: 1px;
    margin-bottom: -14px;
    border: 0;
    border-top: 1px solid #00000060;}
+.level { margin-right:50px}
